<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_nav_home"
            android:icon="@drawable/baseline_home_black_18dp"
            android:title="@string/drawer_nav_home" />
        <item
            android:id="@+id/drawer_nav_profile"
            android:icon="@drawable/baseline_account_circle_black_18dp"
            android:title="@string/drawer_nav_profile" />
        <item
            android:id="@+id/drawer_nav_orders"
            android:icon="@drawable/baseline_book_black_18dp"
            android:title="@string/drawer_nav_orders" />
        <item
            android:id="@+id/drawer_nav_order_ship"
            android:icon="@drawable/baseline_bookmarks_black_18dp"
            android:title="@string/drawer_nav_order_ship" />
        <item
            android:id="@+id/drawer_nav_pay"
            android:icon="@drawable/baseline_payment_black_18dp"
            android:title="@string/drawer_nav_pay" />
        <item
            android:id="@+id/drawer_nav_logout"
            android:icon="@drawable/baseline_exit_to_app_black_18dp"
            android:title="@string/drawer_nav_logout" />
        />
    </group>
</menu>