<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_nav_view_main"
        android:enabled="true"
        android:icon="@drawable/baseline_home_white_36dp"
        android:title="@string/home_bottom_nav_main"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/home_nav_view_coin"
        android:enabled="true"
        android:icon="@drawable/baseline_money_white_36dp"
        android:title="@string/home_bottom_nav_coin"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/home_nav_view_profile"
        android:enabled="true"
        android:icon="@drawable/baseline_account_circle_white_36dp"
        android:title="@string/home_bottom_nav_profile"
        app:showAsAction="ifRoom" />
</menu>