<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundWhite"
    android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
    tools:context=".CreateOrderActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorDark"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/create_order_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/photo_camera_white"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="parent">


        <EditText
            android:id="@+id/create_order_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#00000000"
            android:ems="50"
            android:hint="@string/create_order_title"
            android:inputType="textMultiLine|text"
            android:lines="2"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/create_order_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#00000000"
            android:ems="50"
            android:hint="@string/create_order_content"
            android:inputType="textMultiLine|text"
            android:lines="3"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/create_order_address_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#00000000"
            android:ems="50"
            android:hint="@string/create_order_address_from"
            android:inputType="textMultiLine|text"
            android:lines="3"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/create_order_address_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#00000000"
            android:ems="50"
            android:hint="@string/create_order_address_to"
            android:inputType="textMultiLine|text"
            android:lines="3"
            android:textSize="24sp" />

        <com.weiwangcn.betterspinner.library.BetterSpinner
            android:id="@+id/create_order_spn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#00000000"
            android:ems="50"
            android:hint="@string/create_order_price"
            android:textColor="#808080"
            android:textSize="24sp" />
    </LinearLayout>

    <Button
        android:id="@+id/create_order_btn"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorViolet"
        android:text="@string/create_order_btn"
        android:textColor="#fff"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />
</android.support.constraint.ConstraintLayout>

